# not-a-3d-game-public

./: CMakeLists.txt  CMakePresets.json  README.docx
src/: logger.h  main.cpp  utils.h
src/core/: game.cpp  game.h
src/core/file_managers/: logs_manager.cpp  logs_manager.h  worlds_manager.cpp  worlds_manager.h
src/core/input_handler/: input_handler.cpp  input_handler.h
src/game_logic/: world.cpp  world.h
src/game_logic/game_grid/: game_grid.cpp  game_grid.h
src/game_logic/player/: player.cpp  player.h
src/graphics/: button.h  debug_graphics.cpp  debug_graphics.h  game_graphic.cpp  game_graphic.h
test_worlds/: 1.txt  2.txt  3.txt  4.txt  5.txt
